fixed spacing of headings.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -399,8 +399,8 @@ footer {
     見出し
   --------------------------------------*/
   h3 {
-    margin : 20px  0px;
-    padding:  8px 10px 3px;
+    margin : 30px  0px 20px;
+    padding:  8px 10px  3px;
 
     background-color: themeColor(.1);
     border-left  : 8px solid themeColor(1);
@@ -413,30 +413,32 @@ footer {
   /* CSSのコピペだけ！おしゃれな見出しのデザイン例まとめ68選
      https://saruwakakun.com/html-css/reference/h-design */
   h4 {
-    margin : 16px 7px;
+    margin : 30px 5px 20px;
     padding:  0px 7px;
 
     border    : dashed 1px themeColor(1);
-    box-shadow: 0px 0px 0px 6px themeColor(.1);
+    box-shadow: 0px 0px 0px 5px themeColor(.1);
     background-color: themeColor(.1);
 
-    font-size: 1.36em;
+    font-size: 1.32em;
     color    : charBlack(1);
   }
 
   h5 {
-    margin : 16px  4px 10px;
-    padding:  4px 10px;
-
-    color    : charBlack(1);
-    font-size: 1.2em;
+    margin : 30px 4px 20px;
+    padding:  4px 6px;
 
     background-color: transparent; /*背景透明に*/
     border-left: solid 6px themeColor(1);
+
+    font-size: 1.2em;
+    color    : charBlack(1);
   }
 
   h6 {
-    font-size: 1.2em;
+    margin: 26px 10px 20px;
+
+    font-size: 1.15em;
   }
 
   /*--------------------------------------
